--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,10 +15,15 @@
             </NavLink>
         </div>
        
-       @*  <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+       <div class="nav-item px-3">
+            <NavLink class="nav-link" href="libros">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Libros
             </NavLink>
+        </div> 
+        @*  <div class="nav-item px-3">
+        <NavLink class="nav-link" href="fetchdata">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+        </NavLink>
         </div> *@
     </nav>
 </div>
