--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -20,6 +20,14 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Libros
             </NavLink>
         </div> 
+        
+       <div class="nav-item px-3">
+            <NavLink class="nav-link" href="crearlibro">
+                <span class="oi oi-plus" aria-hidden="true"></span>Guardar Libro
+            </NavLink>
+        </div> 
+
+
         @*  <div class="nav-item px-3">
         <NavLink class="nav-link" href="fetchdata">
         <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
