feat: anti bug en Repositorio

--- a/Pages/Libros/Component_Crear_Libro.razor
+++ b/Pages/Libros/Component_Crear_Libro.razor
@@ -105,6 +105,7 @@
 
     async Task Manejador_Crear_Libro()
     {  
-       var result = await repo.Crear_Libro(libro);
+        var result = await repo.Crear_Libro(libro);
+        manager_navegation.NavigateTo("/libros");
     }
 }
